--- a/styles.css
+++ b/styles.css
@@ -1,35 +1,39 @@
 html{
-    background-color: black
+    background-color: red;
 }
 body{
+    color: black;
     text-align: center;
-    color: aliceblue;
-    margin: 50px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: large;
 }
-h1{
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-}
-h2{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    ;
-}
-.center{
+.titulo{
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     text-align: center;
+    border: 5px solid black;
 }
-.left{
+.box{
+    width: 600px;
+    height: 650px;
+    background: darkorange;
+    margin: 0 auto;
+    overflow: hidden;
+    font-style: oblique;
+}
+.border-radius{
+    border-radius: 30px;
+}
+.border{
+    border: 5px solid black;
+}
+.box-t{
+    width: 1000px;
+    height: 50px;
+    background-color: orange;
+    margin: 0 auto;
+    border-radius: 30px;
+}
+.left-box{
     text-align: left;
 }
-ul, ol{
-    font-family: cursive;
-    
-}
-h3{
-    padding: 0 20px 20px 20px;
-    border: 5px solid white;
-}
-.styleFinal{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-
-
     
