--- a/styles.css
+++ b/styles.css
@@ -1,39 +1,35 @@
 html{
-    background-color: red;
+    background-color: black
 }
 body{
-    color: black;
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: large;
+    color: aliceblue;
+    margin: 50px;
 }
-.titulo{
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+h1{
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+h2{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    ;
+}
+.center{
     text-align: center;
-    border: 5px solid black;
 }
-.box{
-    width: 600px;
-    height: 650px;
-    background: darkorange;
-    margin: 0 auto;
-    overflow: hidden;
-    font-style: oblique;
-}
-.border-radius{
-    border-radius: 30px;
-}
-.border{
-    border: 5px solid black;
-}
-.box-t{
-    width: 1000px;
-    height: 50px;
-    background-color: orange;
-    margin: 0 auto;
-    border-radius: 30px;
-}
-.left-box{
+.left{
     text-align: left;
 }
+ul, ol{
+    font-family: cursive;
+    
+}
+h3{
+    padding: 0 20px 20px 20px;
+    border: 5px solid white;
+}
+.styleFinal{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+
     
